# cai2025

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
configs/: default.yaml
scripts/: quick_test.py  run_experiments.py
src/: __init__.py
src/data/: __init__.py  base.py  odre_loader.py  ucl_loader.py
src/evaluation/: __init__.py  metrics.py  results_saver.py
src/features/: __init__.py  temporal_encoding.py
src/models/: __init__.py  baselines.py  deep_models.py  ensemble.py
src/training/: __init__.py  callbacks.py  trainer.py
src/visualization/: __init__.py  plots.py
